--- a/client/App.html
+++ b/client/App.html
@@ -1,3 +1,10 @@
-<div>
-  <h1>Wellcome to Smart Home Hub</h1>
-</div>
+<v-app>
+  <v-navigation-drawer app></v-navigation-drawer>
+  <v-toolbar app></v-toolbar>
+  <v-content>
+    <v-container fluid>
+      <h1 class="display-2">Wellcome to Smart&nbsp;Home&nbsp;Hub</h1>
+    </v-container>
+  </v-content>
+  <v-footer app></v-footer>
+</v-app>
