--- a/client/App.html
+++ b/client/App.html
@@ -3,7 +3,7 @@
   <v-toolbar app></v-toolbar>
   <v-content>
     <v-container fluid>
-      <h1 class="display-2">Wellcome to Smart&nbsp;Home&nbsp;Hub</h1>
+      <router-view></router-view>
     </v-container>
   </v-content>
   <v-footer app></v-footer>
