--- a/client/App.html
+++ b/client/App.html
@@ -1,6 +1,8 @@
 <v-app>
-  <v-navigation-drawer app></v-navigation-drawer>
-  <v-toolbar app></v-toolbar>
+  <v-navigation-drawer v-model="drawer" clipped fixed app></v-navigation-drawer>
+  <v-toolbar dense fixed clipped-left app>
+    <v-toolbar-side-icon @click.stop="drawer = !drawer"></v-toolbar-side-icon>
+  </v-toolbar>
   <v-content>
     <v-container fluid>
       <router-view></router-view>
