テスト用コンポーネント追加

--- a/client/pages/Home.html
+++ b/client/pages/Home.html
@@ -1,1 +1,4 @@
-<h1 class="display-2">Wellcome to Smart&nbsp;Home&nbsp;Hub</h1>
+<div>
+  <h1 class="display-2">Wellcome to Smart&nbsp;Home&nbsp;Hub</h1>
+  <test-component></test-component>
+</div>
