--- a/client/App.html
+++ b/client/App.html
@@ -1,6 +1,6 @@
 <v-app>
-  <v-navigation-drawer v-model="drawer" clipped fixed app></v-navigation-drawer>
-  <v-toolbar dense fixed clipped-left app>
+  <v-navigation-drawer :mini-variant="drawer" permanent clipped fixed app></v-navigation-drawer>
+  <v-toolbar dense fixed clipped-left app dark color="primary">
     <v-toolbar-side-icon @click.stop="drawer = !drawer"></v-toolbar-side-icon>
   </v-toolbar>
   <v-content>
