--- a/client/pages/Home.html
+++ b/client/pages/Home.html
@@ -1,4 +1,6 @@
 <div>
-  <h1 class="display-2">Wellcome to Smart&nbsp;Home&nbsp;Hub</h1>
+  <h1 class="display-2">Wellcome to
+    <p>Smart Home Hub</p>
+  </h1>
   <test-component></test-component>
 </div>
