--- a/client/index.html
+++ b/client/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 
 <head>
   <title>Smart Home Hub</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="Description" content="このアプリはスマートホーム機器の仲介となるハブアプリです">
 </head>
 
 <body>
