--- a/client/App.html
+++ b/client/App.html
@@ -1,5 +1,5 @@
 <v-app>
-  <v-navigation-drawer :mini-variant="drawer" permanent clipped fixed app>
+  <v-navigation-drawer :mini-variant="!drawer" permanent clipped fixed app>
     <v-list dense>
       <v-list-tile v-for="item in menus" :key="item.key" :to="item.key">
         <v-list-tile-action>
@@ -12,7 +12,7 @@
     </v-list>
   </v-navigation-drawer>
   <v-toolbar dense fixed clipped-left app dark color="primary">
-    <v-toolbar-side-icon @click.stop="drawer = !drawer"></v-toolbar-side-icon>
+    <v-toolbar-side-icon role="switch" aria-label="menu" :aria-checked="drawer" @click.stop="drawer = !drawer"></v-toolbar-side-icon>
   </v-toolbar>
   <v-content>
     <v-container fluid>
