--- a/client/pages/PS4.html
+++ b/client/pages/PS4.html
@@ -1,11 +1,11 @@
 <v-layout>
   <v-flex xs12 md6 offset-md3>
     <v-card v-if="status">
-      <v-btn color="secondary" style="top:16px" :loading="refreshing" :disabled="refreshing"
-        flat small absolute right fab @click="refresh">
+      <v-card-media height="200px" v-if="media" :src="media"></v-card-media>
+      <v-btn color="primary" style="top:16px; opacity: 0.8" :loading="refreshing" :disabled="refreshing"
+        dark depressed absolute right fab small @click="refresh">
         <v-icon>refresh</v-icon>
       </v-btn>
-      <v-card-media height="200px" v-if="media" :src="media"></v-card-media>
 
       <v-card-title primary-title>
         <div>
