なんとなく動いた

--- a/client/pages/PS4.html
+++ b/client/pages/PS4.html
@@ -16,7 +16,7 @@
 
       <v-card-actions>
         <v-tooltip top>
-          <v-btn slot="activator" color="secondary" flat icon :loading="powering" :disabled="powering"
+          <v-btn slot="activator" color="secondary" text icon :loading="powering" :disabled="powering"
             @click="power">
             <v-icon>power_settings_new</v-icon>
           </v-btn>
