--- a/client/App.html
+++ b/client/App.html
@@ -1,19 +1,25 @@
 <v-app>
   <v-navigation-drawer :mini-variant="!drawer" permanent clipped fixed app>
     <v-list dense>
-      <v-list-tile v-for="item in menus" :key="item.key" :to="item.key">
-        <v-list-tile-action>
+      <v-list-item v-for="item in menus" :key="item.key" :to="item.key">
+        <v-list-item-action>
           <v-icon>{{ item.icon }}</v-icon>
-        </v-list-tile-action>
-        <v-list-tile-content>
-          <v-list-tile-title>{{ item.label }}</v-list-tile-title>
-        </v-list-tile-content>
-      </v-list-tile>
+        </v-list-item-action>
+        <v-list-item-content>
+          <v-list-item-title>{{ item.label }}</v-list-item-title>
+        </v-list-item-content>
+      </v-list-item>
     </v-list>
   </v-navigation-drawer>
-  <v-toolbar dense fixed clipped-left app dark color="primary">
-    <v-toolbar-side-icon role="switch" aria-label="menu" :aria-checked="drawer" @click.stop="drawer = !drawer"></v-toolbar-side-icon>
-  </v-toolbar>
+  <v-app-bar dense fixed clipped-left app dark color="primary">
+    <v-app-bar-nav-icon
+      role="switch"
+      aria-label="menu"
+      :aria-checked="drawer"
+      @click.stop="drawer = !drawer"
+    ></v-app-bar-nav-icon>
+    <v-toolbar-title>Smart Home Hub</v-toolbar-title>
+  </v-app-bar>
   <v-content>
     <v-container fluid>
       <router-view></router-view>
