--- a/client/pages/PC.html
+++ b/client/pages/PC.html
@@ -1,6 +1,6 @@
 <div>
   <v-data-table :headers="headers" :items="items" hide-default-footer class="elevation-1">
-    <template slot="items" slot-scope="props">
+    <template slot="item" slot-scope="props">
       <td>{{ props.item }}</td>
       <td class="justify-center">
         <v-btn color="secondary" text icon @click="powerOn(props.item)">
