--- a/client/pages/PS4.html
+++ b/client/pages/PS4.html
@@ -1,25 +1,23 @@
 <v-layout>
   <v-flex xs12 md6 offset-md3>
     <v-card v-if="status">
-      <v-card-media height="200px" v-if="media" :src="media"></v-card-media>
+      <v-img height="200px" v-if="media" :src="media"></v-img>
       <v-btn color="primary" style="top:16px; opacity: 0.8" :loading="refreshing" :disabled="refreshing"
         dark depressed absolute right fab small @click="refresh">
         <v-icon>refresh</v-icon>
       </v-btn>
 
-      <v-card-title primary-title>
-        <div>
-          <h3 class="headline mb-0">{{ status['host-name'] }}</h3>
-          <p>{{ state }}</p>
-        </div>
-      </v-card-title>
+      <v-card-title>{{ status["host-name"] }}</v-card-title>
+      <v-card-text>{{ state }}</v-card-text>
 
       <v-card-actions>
         <v-tooltip top>
-          <v-btn slot="activator" color="secondary" text icon :loading="powering" :disabled="powering"
-            @click="power">
-            <v-icon>power_settings_new</v-icon>
-          </v-btn>
+          <template v-slot:activator="{ on }">
+            <v-btn color="secondary" text icon v-on="on"
+              :loading="powering" :disabled="powering" @click="power">
+              <v-icon>power_settings_new</v-icon>
+            </v-btn>
+          </template>
           <span>{{ powerTo }}</span>
         </v-tooltip>
       </v-card-actions>
