--- a/packages/client/public/index.html
+++ b/packages/client/public/index.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>smart-home-hub</title>
+    <title>Smart Home Hub</title>
+    <meta name="Description" content="このアプリはスマートホーム機器の仲介となるハブアプリです">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
   </head>
   <body>
-    <noscript>
-      <strong>We're sorry but smart-home-hub doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
+    <noscript>このWebアプリはJavascriptを有効にしてください。</noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
   </body>
 </html>
