--- a/packages/client/public/index.html
+++ b/packages/client/public/index.html
@@ -9,6 +9,7 @@
     <meta name="Description" content="このアプリはスマートホーム機器の仲介となるハブアプリです">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
   </head>
   <body>
     <noscript>このWebアプリはJavascriptを有効にしてください。</noscript>
